# oasis-firmware

./: .cursorrules  .gitignore  .windsurfrules  CLAUDE.md  Cargo.toml  FIRMWARE_ANALYSIS_AND_ROADMAP.md  PROJECT_GUIDE.md  QUICKSTART.md  README.md  README_FOR_AI_AGENTS.md  SIMPLIFIED_ARCHITECTURE.md
.swarm/: BOOTSTRAP.md  context.md  memory.md  queue.md  state.md
desktop/: Cargo.toml  README.md
desktop/src/: app.rs  main.rs  mqtt_client.rs  simulation_bridge.rs  state.rs
desktop/src/panels/: configure.rs  deploy.rs  hardware.rs  mod.rs  monitor.rs  orchestrate.rs  simulate.rs  tests.rs
docs/: DEPLOYMENT.md  DESKTOP_APP_DESIGN.md  DEVICE_SCHEMA.md  SIMULATION_ARCHITECTURE.md
examples/: greenhouse-demo.yaml  greenhouse-monitor.yaml  quadcopter-drone.yaml
kicad_bridge/: README.md  pyproject.toml
kicad_bridge/kicad_bridge/src/oasis_kicad/: __init__.py  component_mapper.py  junction_advisor.py
kicad_bridge/src/oasis_kicad/: cli.py  exporter.py  importer.py  kicad_parser.py
legacy/rpi/rusty_pipes/: Cargo.toml
oasis-manager/: MANAGER_SPEC.md
scripts/: build_demo.sh
simavr/: Makefile.common
simulation/: README.md  mcp_server.py  pyproject.toml
simulation/behavioral/: __init__.py  runtime.py  schema.py
simulation/components/actuators/: dc_motor.yaml  led_strip.yaml  pump.yaml  relay.yaml  servo.yaml
simulation/components/sensors/: bme280.yaml  dht22.yaml  light_sensor.yaml  scd40.yaml  soil_moisture.yaml
simulation/datasheet_ingestion/: __init__.py  cli.py  generator.py  parser.py
simulation/emulators/: __init__.py  orchestrator.py
simulation/emulators/comms/: __init__.py  i2c_bus.py  multi_board.py  network_bus.py  serial_bus.py
simulation/emulators/esp32/: __init__.py  wrapper.py
simulation/emulators/linux/: __init__.py  wrapper.py
simulation/emulators/renode/: __init__.py  wrapper.py
simulation/emulators/simavr/: __init__.py  wrapper.py
simulation/tests/: test_emulator_integration.py  test_greenhouse_demo.py  test_linux_emulator.py
src/: error.rs  lib.rs
src/codegen/: mcu.rs  mod.rs  rpi.rs  templates.rs
src/config/: mod.rs  types.rs  validation.rs
src/drivers/: actuators.rs  mod.rs  protocols.rs  sensors.rs
src/simulation/: mod.rs  wokwi.rs
