[package]
name = "oasis-core"
version = "0.1.0"
edition = "2021"
description = "Core types and utilities for Oasis firmware generation"
license = "MIT"

[lib]
name = "oasis_core"
path = "src/lib.rs"

[[bin]]
name = "oasis-build"
path = "src/bin/build.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Code generation
quote = "1.0"
proc-macro2 = "1.0"

# Templating (disabled for now - requires newer Rust)
# tera = "1.19"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variable substitution
shellexpand = "3.1"
regex = "1.10"

# File system
walkdir = "=2.4.0"

[dev-dependencies]
tempfile = "3.10"
