[project]
name = "oasis-simulation"
version = "0.1.0"
description = "Behavioral simulation runtime for Oasis firmware with MCP interface"
authors = [{ name = "Oasis Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
fmi = [
    "fmpy>=0.3",
]

[project.scripts]
oasis-sim = "mcp_server:run_stdio_server"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["behavioral*", "components*"]
